--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -86,7 +86,7 @@
 }
 
 .hamburger{
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -116,6 +116,9 @@
 }
 
 @media screen and (max-width: 920px) {
+    .hamburger{
+        display: flex;
+    }
     .header{
         &__btn{
             margin: 0;
